--- a/portolio/readme.mb
+++ b/portolio/readme.mb
@@ -1,2 +1,2 @@
-
-![6G8akeAR7hA](https://ibb.co/kKNtvWf)
+Простая верстка из макета в формате .fig (Figma)
+Верстка без использования дополнительных CSS фреймворков или библотек, все на flex-box.
